mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_optional_unwrap_none.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 2 errors found

error: match cannot be used as an expression; it can only be used as a statement
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_optional_unwrap_none.mux:6:10
   |
 6 | auto x = match opt {
   |          ^^^^^
   |
= help: Use 'match' as a standalone statement with 'return' in each arm, or use an if/else expression for inline conditionals.

error: Expected newline before statement
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_optional_unwrap_none.mux:6:20
   |
 6 | auto x = match opt {
   |                    ^
